--- a/index.html
+++ b/index.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paralax By ARfan shakil</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="wrapper">
-        <div class="container">
-            <img src="/img/background.png" alt="" class="background">
-            <img src="/img/foreground.png" alt="" class="foreground">
-            <h1 class="h1">ADVENTURE</h1>
-        </div>
-        <section>
-        <h2 class="sechead">Adventure Time </h2>
+      <div class="container">
+        <header>
+          <h1>Arfan Shakil</h1>
+          <nav>
+            <a href="#">Home </a>
+            <a href="#">About </a>
+            <a href="#">Services </a> 
+            <a href="#">Contact </a>
+          </nav>
+        </header>
+        <img src="/img/background.png" alt="" class="background" />
+        <img src="/img/foreground.png" alt="" class="foreground" />
+        <h1 class="h1">ADVENTURE</h1>
+      </div>
+      <section>
+        <h2 class="sechead">Adventure Time</h2>
         <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi exercitationem unde neque adipisci nobis ratione, aliquid debitis aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis dolor atque vel natus iure repellat explicabo tenetur sapiente iste commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum accusantium facere esse deserunt at nesciunt!
-            <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestiae quod error excepturi vero quia nisi voluptatem voluptas expedita alias sed fuga exercitationem quam temporibus molestias, eos possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam exercitationem velit, magnam eius itaque impedit cupiditate veniam ab temporibus officia nemo, sapiente rerum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+          exercitationem unde neque adipisci nobis ratione, aliquid debitis
+          aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis
+          dolor atque vel natus iure repellat explicabo tenetur sapiente iste
+          commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum
+          accusantium facere esse deserunt at nesciunt!
+          <br />
+          <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          molestiae quod error excepturi vero quia nisi voluptatem voluptas
+          expedita alias sed fuga exercitationem quam temporibus molestias, eos
+          possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam
+          exercitationem velit, magnam eius itaque impedit cupiditate veniam ab
+          temporibus officia nemo, sapiente rerum!
         </p>
         <!-- HEADING 1  -->
         <div class="bg bg1"><h2 class="description">BIKING</h2></div>
         <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi exercitationem unde neque adipisci nobis ratione, aliquid debitis aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis dolor atque vel natus iure repellat explicabo tenetur sapiente iste commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum accusantium facere esse deserunt at nesciunt!
-            <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestiae quod error excepturi vero quia nisi voluptatem voluptas expedita alias sed fuga exercitationem quam temporibus molestias, eos possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam exercitationem velit, magnam eius itaque impedit cupiditate veniam ab temporibus officia nemo, sapiente rerum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+          exercitationem unde neque adipisci nobis ratione, aliquid debitis
+          aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis
+          dolor atque vel natus iure repellat explicabo tenetur sapiente iste
+          commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum
+          accusantium facere esse deserunt at nesciunt!
+          <br />
+          <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          molestiae quod error excepturi vero quia nisi voluptatem voluptas
+          expedita alias sed fuga exercitationem quam temporibus molestias, eos
+          possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam
+          exercitationem velit, magnam eius itaque impedit cupiditate veniam ab
+          temporibus officia nemo, sapiente rerum!
         </p>
         <!-- HEADING 2 -->
         <div class="bg bg2"><h2 class="description">PARA GLIDING</h2></div>
         <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi exercitationem unde neque adipisci nobis ratione, aliquid debitis aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis dolor atque vel natus iure repellat explicabo tenetur sapiente iste commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum accusantium facere esse deserunt at nesciunt!
-            <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestiae quod error excepturi vero quia nisi voluptatem voluptas expedita alias sed fuga exercitationem quam temporibus molestias, eos possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam exercitationem velit, magnam eius itaque impedit cupiditate veniam ab temporibus officia nemo, sapiente rerum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+          exercitationem unde neque adipisci nobis ratione, aliquid debitis
+          aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis
+          dolor atque vel natus iure repellat explicabo tenetur sapiente iste
+          commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum
+          accusantium facere esse deserunt at nesciunt!
+          <br />
+          <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          molestiae quod error excepturi vero quia nisi voluptatem voluptas
+          expedita alias sed fuga exercitationem quam temporibus molestias, eos
+          possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam
+          exercitationem velit, magnam eius itaque impedit cupiditate veniam ab
+          temporibus officia nemo, sapiente rerum!
         </p>
         <!-- HEADING 3 -->
         <div class="bg bg3"><h2 class="description">SURFING</h2></div>
         <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi exercitationem unde neque adipisci nobis ratione, aliquid debitis aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis dolor atque vel natus iure repellat explicabo tenetur sapiente iste commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum accusantium facere esse deserunt at nesciunt!
-            <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestiae quod error excepturi vero quia nisi voluptatem voluptas expedita alias sed fuga exercitationem quam temporibus molestias, eos possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam exercitationem velit, magnam eius itaque impedit cupiditate veniam ab temporibus officia nemo, sapiente rerum!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+          exercitationem unde neque adipisci nobis ratione, aliquid debitis
+          aspernatur facilis nihil. Molestiae libero aperiam, in reiciendis
+          dolor atque vel natus iure repellat explicabo tenetur sapiente iste
+          commodi. Aliquid corporis necessitatibus ratione iste totam! Quis eum
+          accusantium facere esse deserunt at nesciunt!
+          <br />
+          <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          molestiae quod error excepturi vero quia nisi voluptatem voluptas
+          expedita alias sed fuga exercitationem quam temporibus molestias, eos
+          possimus sequi? Voluptas hic nostrum fugiat natus distinctio ipsam
+          exercitationem velit, magnam eius itaque impedit cupiditate veniam ab
+          temporibus officia nemo, sapiente rerum!
         </p>
-        </section>
+      </section>
     </div>
-</body>
+  </body>
 </html>
